me olvide de agregar algo