@@ -51,7 +51,7 @@ class ventana_agregar_autopartes extends JFrame{
         agregar.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e){
                 Integer id=interfaz.catalogo.getid()+1; 
-                interfaz.cargarAutoparte(id,denominacion.getText(),descripcion.getText(),categoria.getText(),marca.getText(),auto.getText(),precio.getText(),new Integer(stock.getText()),new Integer(stock_minimo.getText()),enlace.getText());
+                interfaz.cargarAutoparte(id,denominacion.getText(),descripcion.getText(),categoria.getText(),marca.getText(),auto.getText(),precio.getText(),Integer.valueOf(stock.getText()),Integer.valueOf(stock_minimo.getText()),enlace.getText());
                 ventana_padre.cargar_elementos();
                 interfaz.catalogo.setid(id);
             }
